--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jsonmvc-db",
   "version": "0.1.0",
   "description": "The jsonmvc data library",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "node test/graph.js"
   },
