--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "url": "https://github.com/jsonmvc/db/issues"
   },
   "homepage": "https://github.com/jsonmvc/db#readme",
-  "devDependencies": {
+  "dependencies": {
     "fast-json-patch": "^1.1.1",
     "uniq": "^1.0.1"
   }
