--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jsonmvc-db",
-  "version": "0.2.0",
+  "version": "0.1.1",
   "description": "The jsonmvc data library",
   "main": "src/index.js",
   "scripts": {
@@ -30,6 +30,7 @@
   "homepage": "https://github.com/jsonmvc/db#readme",
   "dependencies": {
     "fast-json-patch": "^1.1.1",
+    "json-merge-patch": "^0.2.3",
     "uniq": "^1.0.1"
   }
 }
