--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "The jsonmvc data library",
   "main": "src/index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "perf": "node perf/test.js"
   },
   "repository": {
     "type": "git",
@@ -34,12 +35,15 @@
     "uniq": "^1.0.1"
   },
   "devDependencies": {
+    "benchmark": "^2.1.2",
     "jest-cli": "^17.0.3",
+    "lodash": "^4.17.2",
     "promise": "^7.1.1",
     "yaml-js": "^0.1.4"
   },
   "jest": {
     "testRegex": "test/.*\\.js$",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "collectCoverage": "true"
   }
 }
