--- a/src/errors.yml
+++ b/src/errors.yml
@@ -22,8 +22,11 @@ node:
     text: Node already exists at the given path.
     name: node
   2:
-    text: One of given paths is not valid.
+    text: Invalid node arguments given.
     name: node
   3:
     text: Nodes can't be cyclical.
+    name: node
+  4:
+    text: The node function need to have the same number of arguments as the dependencies.
     name: node
