--- a/test/on.yml
+++ b/test/on.yml
@@ -36,20 +36,29 @@
   - "/foo/bar"
 
 - comment: Should trigger a listener when multiple static values change underneath that node
-  doc: {}
+  doc: {
+    foo: {
+      qux: 123
+    }
+  }
   patch:
   - op: add
     path: "/foo/bar/baz"
     value: 123
   - op: add
-    path: "/foo/bar/baz"
+    path: "/foo/bam/boo"
     value: 321
   - op: add
-    path: "/foo/bar/baz"
+    path: "/foo/bla/blo"
     value: 444
+  dynamic:
+    /foo/bar/boo: ['/foo/bam/boo']
   async: true
   listeners:
+  - "/foo/bar"
   - "/foo"
+  - "/foo"
+  - "/bam"
 
 - comment: One dynamic node with single path
   doc:
