--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "buildErrors": "./node_modules/.bin/yaml2json src/errors.yml -s",
     "test": "npm run buildErrors && jest",
     "test-on-travis": "npm run buildErrors && jest && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
-    "perf": "node perf/regex.js"
+    "perf": "node perf/test.js"
   },
   "repository": {
     "type": "git",
