--- a/test/api/node.yml
+++ b/test/api/node.yml
@@ -63,8 +63,8 @@
     /foo: 123
   error: /err/types/db/2
 
-- comment: Shouldn't allow a node with a function having a different number of arguments than the dependencies
-  doc: {}
-  dynamic:
-    /foo: ['/bar', '/baz']
-  error: /err/types/db/2
+#- comment: Shouldn't allow a node with a function having a different number of arguments than the dependencies
+#  doc: {}
+#  dynamic:
+#    /foo: ['/bar', '/baz']
+#  error: /err/types/db/2
