Add promise deps

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "benchmark": "^2.1.2",
     "coveralls": "^2.11.15",
     "jest-cli": "^17.0.3",
+    "promise": "^7.1.1",
     "yaml-js": "^0.1.4",
     "yamljs": "^0.2.8"
   },
