Fix an issue with getting undefined instead of false

--- a/test/api/get.yml
+++ b/test/api/get.yml
@@ -155,3 +155,10 @@
     /foo: ['/bar']
   get: /foo/bla
   expect: undefined
+
+- comment: Should get a falsy value
+  doc:
+    bar:
+      baz: false
+  get: /bar/baz
+  expect: false
