Add null check for getting a null value

--- a/test/api/get.yml
+++ b/test/api/get.yml
@@ -162,3 +162,10 @@
       baz: false
   get: /bar/baz
   expect: false
+
+- comment: Should get a null value
+  doc:
+    bar:
+      baz: null
+  get: /bar/baz
+  expect: null
