Fix listener issue when listeneing to a sub-property of a dynamic node

--- a/test/api/on.yml
+++ b/test/api/on.yml
@@ -230,3 +230,18 @@
     /qux: ['/foo']
   listeners:
   - /qux/bar
+
+- comment: Should trigger if the listener is on a sub dynamic property
+  doc:
+    foo:
+      bar: 123
+  dynamic:
+    /bam: ['/foo']
+  patch:
+  - op: add
+    path: /foo/bar
+    value: 124
+  listeners:
+  - /bam/bar
+  async: true
+
