All tests passing for caching

--- a/test/api/get.yml
+++ b/test/api/get.yml
@@ -169,3 +169,11 @@
       baz: null
   get: /bar/baz
   expect: null
+
+- comment: Should return undefined for a nested child on a dynamic node with a bad computation value
+  doc: {}
+  dynamic:
+    /foo: ['/bar']
+  get: /foo/baz
+  expect: undefined
+
