WIP. Improving dynamic recalculation.

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "jest": {
     "testRegex": "test/.*\\.js$",
     "testEnvironment": "node",
+    "verbose": true,
     "collectCoverage": "true"
   }
 }
