Add cacheInvalidation baseline

--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   "devDependencies": {
     "benchmark": "^2.1.2",
     "coveralls": "^2.11.15",
-    "jest-cli": "^17.0.3",
+    "jest-cli": "^19.0.2",
     "promise": "^7.1.1",
     "yaml-js": "^0.1.4",
     "yamljs": "^0.2.8"
@@ -47,6 +47,6 @@
   "jest": {
     "testRegex": "test/.*\\.js$",
     "testEnvironment": "node",
-    "collectCoverage": "true"
+    "collectCoverage": true
   }
 }
