--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/jsonmvcdb.js",
   "scripts": {
     "buildErrors": "./node_modules/.bin/yaml2json src/errors.yml -s",
-    "build": "./node_modules/.bin/rollup -c build/rollup.config.js",
+    "build": "./node_modules/.bin/gulp --gulpfile build/gulpfile.babel.js build",
     "test": "npm run buildErrors && jest",
     "test-on-travis": "npm run buildErrors && jest && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "perf": "node perf/test.js"
@@ -38,11 +38,15 @@
     "setimmediate": "^1.0.5"
   },
   "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
     "benchmark": "^2.1.2",
     "coveralls": "^2.11.15",
+    "gulp": "^3.9.1",
     "jest-cli": "^19.0.2",
     "promise": "^7.1.1",
     "rollup": "^0.41.6",
+    "rollup-analyzer": "^1.0.2",
     "rollup-plugin-alias": "^1.3.1",
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-node-builtins": "^2.1.2",
