--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "buildErrors": "./node_modules/.bin/yaml2json src/errors.yml -s",
     "build": "./node_modules/.bin/gulp --gulpfile build/gulpfile.babel.js build",
-    "test": "npm run buildErrors && jest",
-    "test-on-travis": "npm run buildErrors && jest && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
+    "test:errors": "npm run buildErrors && ./node_modules/.bin/jest",
+    "test": "npm run build && ./node_modules/.bin/jest",
+    "test-on-travis": "npm run buildErrors && ./node_modules/.bin/jest && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "perf": "node perf/test.js"
   },
   "repository": {
@@ -34,11 +35,17 @@
   "homepage": "https://github.com/jsonmvc/db#readme",
   "dependencies": {
     "uniq": "^1.0.1",
-    "lodash": "^4.17.2",
-    "setimmediate": "^1.0.5"
+    "setimmediate": "^1.0.5",
+    "lodash-es": "^4.17.4"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
+    "babel-helpers": "^6.24.1",
+    "babel-jest": "^20.0.3",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-plugin-lodash": "^3.2.11",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
+    "babel-plugin-transform-imports": "^1.2.0",
     "babel-preset-es2015": "^6.24.1",
     "benchmark": "^2.1.2",
     "coveralls": "^2.11.15",
@@ -47,16 +54,26 @@
     "promise": "^7.1.1",
     "rollup": "^0.41.6",
     "rollup-analyzer": "^1.0.2",
-    "rollup-plugin-alias": "^1.3.1",
+    "rollup-plugin-babel": "^2.7.1",
     "rollup-plugin-commonjs": "^8.0.2",
-    "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-resolve": "^3.0.0",
     "yaml-js": "^0.1.4",
-    "yamljs": "^0.2.8"
+    "yaml2json": "^1.0.2"
   },
   "jest": {
+    "transform": {
+      ".*": "babel-jest"
+    },
+    "transformIgnorePatterns": [
+      "<rootDir>/node_modules/(?!lodash-es)"
+    ],
     "testRegex": "test/.*\\.js$",
     "testEnvironment": "node",
-    "collectCoverage": true
+    "collectCoverage": true,
+    "verbose": true,
+    "moduleDirectories": [
+      "node_modules",
+      "src"
+    ]
   }
 }
