--- a/package.json
+++ b/package.json
@@ -40,12 +40,8 @@
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
-    "babel-helpers": "^6.24.1",
-    "babel-jest": "^20.0.3",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-lodash": "^3.2.11",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
-    "babel-plugin-transform-imports": "^1.2.0",
     "babel-preset-es2015": "^6.24.1",
     "benchmark": "^2.1.2",
     "coveralls": "^2.11.15",
@@ -53,10 +49,10 @@
     "jest-cli": "^19.0.2",
     "promise": "^7.1.1",
     "rollup": "^0.41.6",
-    "rollup-analyzer": "^1.0.2",
     "rollup-plugin-babel": "^2.7.1",
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-plugin-uglify": "^2.0.1",
     "yaml-js": "^0.1.4",
     "yaml2json": "^1.0.2"
   },
